
- YouTube ratings are now yt:rating elements for like/dislike counts, not
  gd:rating elements

- YouTube sample app has relaxed metadata requirements for uploading

- YouTube API no longer uses client IDs

Bugs Fixed

- Fixed signing of OAuth paths with non-alphanumeric characters

- Fixed OAuth sign-in when using an authentication object with a prior
  token secret (thanks ddickison)

- Stop printing _cmd in a macro as a C-string to quiet a clang warning (thanks
  j abley)


Release 1.10.0
31-March-2010
Changes since 1.9.1

Additions

- Added support for Google Translator Toolkit API.

- Added support for Google Analytics v2.1 API.

- Added support for chunked uploads, uploads from a file handle, and upload
  pause/resume to Docs and YouTube APIs, and updated Docs and YouTube sample
  apps to demonstrate pause/resume.

- Added fieldSelection support for partial responses and updates.

- Added Objective-C block completion handler support to GData service class
  fetch APIs.

- Added addCategoryFilterWithCategory: to GDataQuery.

- Added "onlydeleted" parameter for queries.

- Added a faster category search routine, categories:containsCategoryWithScheme:

- Deletion fetch callbacks can now get the deleted entry as the ticket's
  postedObject.  The postedObject is also now available following authentication
  errors.

- GDataServiceGoogle now has methods to fetch an entry or feed specifying an
  ETag.

- Added viewLink accessors to Maps entries, and new Maps spacial and attribute
  query parameters.

- Added Docs user metadata entry support to the API and sample app.

- Added publish elements to Docs revision feed.

- Added revision publishing and doc duplication to Docs sample app.

- Added yt:incomplete element to app:control in YouTube video entries,
  yt:accessControl to video entries, and a caption query parameter.

- Added collections support to Books API and sample app.

- Added experimental OAuth sign-in classes.

Changes
